--- a/style.css
+++ b/style.css
@@ -11,3 +11,34 @@ td, th {
     border: 1px solid black;
     padding: 5px 10px;
 }
+nav {
+    background-color: lightgray;
+}
+#logo {
+    font-size: 30px; color: orangered;
+}
+#logo1 {
+    font-weight: bold; font-size: 25px;
+    color: orangered;
+    font-family: Baskerville, sans-serif;
+}
+#search-icon{
+    color: #0d6efd;
+    font-size: 30px;
+}
+#addCardBtnNav {
+    color: #0d6efd;
+    font-size: 30px;
+}
+main {
+    background-color: lightseagreen;
+}
+#collapseExample {
+    border: 2px solid black;
+    border-radius: 10px;
+}
+#pageHeader {
+    color: whitesmoke;
+    font-family: 'Zapf Dingbats',sans-serif;
+    font-size: 50px;
+}
